# advent-of-code-2023

./: .gitignore  README.md
alexandre_oddbrew/1/: index.js
alexandre_oddbrew/2/: part1.js  part2.js
alexandre_oddbrew/3/: part1.js  part2.js
alexandre_oddbrew/4/: part1.js  part2.js
jo/: Advent this.ipynb
jo/jupyter/: Advent this.ipynb  Pipfile
jo/python/: day1.py  day4.py  pyproject.toml
jo/python/common/: solution.py
jo/python/src/: day1.py  day4.py
jo/python/src/common/: solution.py
jo/python/test/: test_day4.py
le_v/: pyproject.toml
le_v/python/src/: day_4.py  day_6.py  day_7.py
le_v/rust/: Cargo.toml
le_v/rust/src/: main.rs
le_v/src/: day_1.py  day_2.py  day_3.py  day_4.py
lukas/day-1/: challenge.py
lukas/day-2/: challenge.py  test1-constraints.json
piru/: README.md  aoc2023.cabal  hie.yaml  package.yaml  stack.yaml
piru/exe/: Main.hs
piru/lib/: BoatRace.hs  CamelCards.hs  Challenge.hs  CubeConundrum.hs  GearRatios.hs  HauntedWasteland.hs  MirageMaintenance.hs  Scratchcards.hs  Seeds.hs  Trebuchet.hs
piru/python/: day6.py
simon/Day01/: day1-part1.py  day1-part2.py
simon/Day03/: day3-part1.py
simon/Day04/: day4-part1.py  day4-part2.py
simon/Day06/: day6-part2.py
simon/Day07/: day-7-part1.py  day-7-part2.py
simon/Day08/: day8-part1.py  day8-part2.py
simon/Day10/: day10-part1.py  day10-part2.py
simon/Day11/: day11-part1.py  day11-part2.py
simon/Day2/: day2-part1.py  day2-part2.py
simon/Day3/: day3-part1.py  day3-part2.py
simon/Day5/: day5-part1.py
simon/Day6/: day6-part1.py
simon/Day7/: day-7-part1.py  (+1 more)
(+2 files in other folders)
