[tool.poetry]
name = "advent-2023"
version = "0.1.0"
description = ""
authors = ["GrimLefourbe <github@grimlefourbe.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^69.0.2"
black = "^23.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
