[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Joanne <joanne254@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
parameterized = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
